# enterprise-rag-agent

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py  sse.py
backend/app/core/: __init__.py  config.py  container.py
backend/app/domain/: __init__.py  agent.py  models.py  workspace.py
backend/app/mcp/: demo_server.py
backend/app/repositories/: __init__.py  agent_runs.py  knowledge.py  milvus_index.py  qdrant_index.py  sqlite_agent_runs.py  sqlite_knowledge.py  sqlite_workspace.py  vector_index.py  workspace.py
backend/app/schemas/: __init__.py  agent.py  chat.py  conversations.py  documents.py  evaluation.py  workspace.py
backend/app/services/: agent_orchestration.py  agent_runtime.py  agent_skills.py  chat_model.py  (+18 more)
backend/tests/: __init__.py  conftest.py  test_agent_orchestration.py  test_agent_runtime.py  test_api.py  test_chunking.py  test_complete_product.py  test_document_formats.py  test_embedding_provider.py  test_mcp_client.py  test_milvus_index.py  test_persistence_and_upload.py  test_stage5_pipeline.py  test_streaming_chat.py  test_vector_retrieval.py  test_workspace_agent.py
docs/: COURSE_ROADMAP.md  LESSON_03_VECTOR_RETRIEVAL.md  LESSON_05_LLM_PIPELINE.md  RUNBOOK.md  STAGE_06_AGENT_RUNTIME.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: ask.module.css  globals.css  layout.tsx  page.tsx
frontend/components/: app-shell.tsx  status-pill.tsx
frontend/lib/: api.ts  types.ts
(+15 files in other folders)
