[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag-agent"
version = "0.1.0"
description = "A learning-first enterprise RAG and Agent runtime prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx2>=2.0,<3.0",
    "pypdf>=6.0,<7.0",
    "python-multipart>=0.0.20,<1.0",
    "python-docx>=1.2,<2.0",
    "qdrant-client>=1.18,<2.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-q"

